# NinjaRobotV4

./: DevelopmentLog.md  GEMINI.md  InstallationGuide.md  NinjaCodeSpec.md  NinjaDevGuide.md  NinjaUserGuide.md  README.md  ReconstructionGuide.md  buzzer.json  config.json  main_robot_control.py  servo.json  servo_movement.json  test_hal.py
.serena/: project.yml
V3Archive/: InstallationGuide.md  README.md  main_robot_control.py
V3Archive/pi0buzzer/: implementation.md  pyproject.toml
V3Archive/pi0buzzer/src/pi0buzzer/: __main__.py
V3Archive/pi0disp/: pyproject.toml
V3Archive/pi0disp/samples/: robot_face2.py
V3Archive/pi0disp/src/pi0disp/utils/: sprite.py
V3Archive/pi0ninja_v3/: pyproject.toml
V3Archive/pi0ninja_v3/src/pi0ninja_v3/: web_server.py
V3Archive/pi0ninja_v3/src/pi0ninja_v3/static/: main.js  style.css
V3Archive/pi0ninja_v3/src/pi0ninja_v3/templates/: index.html
V3Archive/piservo0/: pyproject.toml
V3Archive/piservo0/piservo0/: __main__.py
V3Archive/piservo0/piservo0/core/: piservo.py
V3Archive/piservo0/samples/: sample_02_calibrable_servo.py  sample_03_multi_servo.py
V3Archive/piservo0/tests/: test_03_calibrable_servo.py
V3Archive/vl53l0x_pigpio/: pyproject.toml
V3Archive/vl53l0x_pigpio/samples/: numpy_example.py
V3Archive/vl53l0x_pigpio/tests/: test_02_offset.py
docs/archive/: InstallationGuide.md
ninja_core/: README.md  pyproject.toml
ninja_core/src/ninja_core/: __main__.py  config.py  hal.py
ninja_core/src/ninja_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ninja_utils/: LICENSE  README.md  pyproject.toml
ninja_utils/samples/: sample.py
ninja_utils/src/ninja_utils/: __init__.py  keyboard.py  my_logger.py
pi0buzzer/: README.md  pyproject.toml
pi0buzzer/src/pi0buzzer/: __init__.py  __main__.py  driver.py
pi0disp/: LICENSE  README.md  pyproject.toml
pi0disp/src/pi0disp/: __main__.py
pi0disp/src/pi0disp/commands/: ball_anime.py  image.py
pi0disp/src/pi0disp/utils/: image_processor.py  performance_core.py
pi0ninja_v3/: config.json
pi0ninja_v3/src/pi0ninja_v3/: __init__.py  detect_distance.py  facial_expressions.py  hardware_controllers.py  movement_recorder.py  ninja_agent.py  robot_sound.py  show_faces.py  web_server.py
pi0ninja_v3/src/pi0ninja_v3/tools/: detect_distance.py  movement_recorder.py
pi0servo/: README.md  pyproject.toml
pi0servo/src/pi0servo/: __init__.py  __main__.py
pi0servo/src/pi0servo/command/: cmd_calib.py  cmd_servo.py
pi0servo/src/pi0servo/core/: __init__.py  calibrable_servo.py  multi_servo.py  piservo.py
pi0servo/src/pi0servo/helper/: thread_multi_servo.py  thread_worker.py
pi0servo/src/pi0servo/utils/: servo_config_manager.py
pi0vl53l0x/: README.md  pyproject.toml
pi0vl53l0x/src/pi0vl53l0x/: __main__.py  driver.py
piservo0/piservo0/core/: calibrable_servo.py
piservo0/piservo0/utils/: servo_config_manager.py
piservo0/samples/: sample_01_piservo.py
piservo0/samples/tiny_robot/: exec.py  manual.py  thr_manual.py  web.py
piservo0/tests/: test_01_piservo.py  test_04_multi_servo.py  test_05_thread_multi_servo.py
vl53l0x_pigpio/src/vl53l0x_pigpio/: driver.py
vl53l0x_pigpio/tests/: test_03_config_manager.py
