[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ninja_utils"
version = "0.1.0"
description = "Shared utilities for the NinjaRobotV4 project."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Nil Creator", email = "nilcreator@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Nilcreator/NinjaRobotV4"
