[project]
name = "pi0buzzer"
version = "0.1.0"
description = "A library to control a buzzer on a Raspberry Pi."
authors = [
    {name = "Nil Creator", email = "nilcreator@gmail.com"},
]
dependencies = [
    "pigpio",
    "click",
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pi0buzzer = "pi0buzzer.__main__:cli"

[project.optional-dependencies]
dev = ["ruff"]
