[project]
name = "pi0servo"
version = "0.1.0"
description = "A library to control servo motors on a Raspberry Pi using pigpio."
authors = [
    {name = "Nil", email = "your@email.com"},
]
dependencies = [
    "pigpio",
    "click",
    "blessed",
    "ninja_utils @ file:../ninja_utils",
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
pi0servo = "pi0servo.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
