[project]
name = "pi0vl53l0x"
version = "0.1.0"
description = "A Python library for the VL53L0X distance sensor using pigpio."
authors = [
    {name = "Nil Creator", email = "nilcreator@gmail.com"},
]
dependencies = [
    "click",
    "numpy",
    "pigpio",
    "ninja_utils",
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pi0vl53l0x = "pi0vl53l0x.__main__:cli"

[project.optional-dependencies]
dev = ["ruff"]
